--- a/index.html
+++ b/index.html
@@ -97,34 +97,30 @@
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
-</div></div>
-       
-
-
+</div>
+</div>
+</div>
+</div>
+</main>
+  <footer>
+    <div class="container-fluid p-5 mt-5 bg-body-tertiary">
+      <div class="row justify-content-evenly align-items-center">
+        <div class="propio col-12 col-lg-3"><img src="./img/logo.png" alt=""></div>
+        <div class="col-12 col-lg-3"> 
+<ul class="navbar-nav">
+  <li><a class="nav-link" href="">Facebook</a></li>
+  <li><a class="nav-link" href="">Youtube</a></li>
+  <li><a class="nav-link" href="">Instagram</a></li>
+</ul>
       </div>
-
-
-
-    </div>
-
-
-
-
-
-
-
-
-  </main>
-
-
-
-  
-
-
-
-
-
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <div class="col-12 col-lg-3"> 
+          <ul class="navbar-nav">
+  <li><a class="nav-link" href="">Legales</a></li>
+  <li><a class="nav-link" href="">Tyc</a></li>
+</ul>
+</div>
+</div>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
