--- a/paginas/inicio.html
+++ b/paginas/inicio.html
@@ -12,6 +12,93 @@
   <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
+  <header>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary p-3">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="./img/logo.png" alt=""
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Sobre Nosotros</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Contacto</a
+                >
+              </li>
+            </ul>
+
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Iniciar Sesion</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Registrarse</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+
+
+      
+      <main>
+
+
+
+
+
+      </main>
+
+
+<footer>
+      <div class="container-fluid p-5 mt-5 bg-body-tertiary">
+        <div class="row justify-content-evenly align-items-center">
+          <div class="propio col-12 col-lg-3">
+            <img src="./img/logo.png" alt="" />
+          </div>
+          <div class="col-12 col-lg-3">
+            <ul class="navbar-nav">
+              <li><a class="nav-link" href="">Facebook</a></li>
+              <li><a class="nav-link" href="">Youtube</a></li>
+              <li><a class="nav-link" href="">Instagram</a></li>
+            </ul>
+          </div>
+          <div class="col-12 col-lg-3">
+            <ul class="navbar-nav">
+              <li><a class="nav-link" href="">Legales</a></li>
+              <li><a class="nav-link" href="">Tyc</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+
   
 
 
