--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -9,14 +9,14 @@
   <title>Contacto</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/estilos.css">
+  <link rel="stylesheet" href="../css/contacto.css">
 </head>
 <body>
   <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary p-3">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="./img/logo.png" alt=""
+            <img src="../img/logo.png" alt=""
           /></a>
           <button
             class="navbar-toggler"
