--- a/paginas/sobre-nosotros.html
+++ b/paginas/sobre-nosotros.html
@@ -9,14 +9,14 @@
   <title>Sobre Nosotros</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/estilos.css">
+  <link rel="stylesheet" href="../css/sobre-nosotros.css">
 </head>
 <body>
       <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary p-3">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="./img/logo.png" alt=""
+            <img src="../img/logo.png" alt=""
           /></a>
           <button
             class="navbar-toggler"
@@ -64,12 +64,88 @@
         </div>
       </nav>
 
+    </header>
+
 
 
 
       <main>
 
+<div class="titulo">
+      <h2 class="my-3 text-center">Quienes Somos</h2>
+      </div>
 
+
+<section class="d-flex">
+      <div class="my-1 mx-5 text-center fs-4">
+    <p> EstiloGamer&copy;, es una
+                              empresa creada en Octubre del 2024 por un grupo de
+                              entusiastas de la tecnología y el gaming,
+                              dedicándose a la comercialización y ensamblado de
+                              computadoras para uso doméstico, de oficina,
+                              diseño y entretenimiento, además de otros
+                              productos de Hardware de computación (Notebook,
+                              Tablet, Accesorios, Periféricos, Componentes,
+                              Monitores, etc.).</p>
+</div>
+
+<!-- corrousel -->
+
+</section>
+<div id="carouselExampleFade" class="carousel slide carousel-fade w-80">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://scontent.ftuc1-2.fna.fbcdn.net/v/t1.6435-9/45035709_2164072760521000_1805843747204759552_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=JyguDWXUv1QQ7kNvgEe5cAA&_nc_oc=Adig9TvOeJQsS4pMvZYd3EBK7vfXE6YYaV8TDAswWajtjGT7ACdF9tAEFa6RAzaxoHY&_nc_zt=23&_nc_ht=scontent.ftuc1-2.fna&_nc_gid=A6hD-yKT7VO-Ylge6Gy_IF6&oh=00_AYBVqRHM43p3XZX6Wp7RdeOO3HHNn4udyuKfOmAZk9vwqA&oe=678F4199" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://i.ytimg.com/vi/dLArFJ85UuU/maxresdefault.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://www.andespc.com/img/loc3.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://files.qatarliving.com/post/2021/11/11/hyperX_gaming_accessories_qatar.jpg" class="d-block w-100" alt="">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+<!-- cards -->
+ <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-4">
+ <div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
+</div>
+<div class="col-12 col-md-6 col-lg-4">
+<div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
+</div>
+<div class="col-12 col-md-6 col-lg-4">
+<div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
+</div>
+</div>
+</div>
 
 
 
@@ -80,7 +156,7 @@
       <div class="container-fluid p-5 mt-5 bg-body-tertiary">
         <div class="row justify-content-evenly align-items-center">
           <div class="propio col-12 col-lg-3">
-            <img src="./img/logo.png" alt="" />
+            <img src="../img/logo.png" alt="" />
           </div>
           <div class="col-12 col-lg-3">
             <ul class="navbar-nav">
