se colocan imagenes en cards y estilos en css

--- a/index.html
+++ b/index.html
@@ -124,42 +124,79 @@
       <h2 class="p-5 text-center">Juegos Recomendados</h2>
       <div class="container">
         <div class="row">
-          <div class="col-12 col-md-6 col-lg-4">
+          <div class="col-12 col-md-6 col-lg-4 mt-5">
             <div class="card">
-              <img src="..." class="card-img-top" alt="..." />
+              <img src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/media/image/2024/04/f1-24-3300526.jpg?tf=3840x" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">F1-24</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                 Forma parte de los 20 con EA SPORTS™ F1® 24, el videojuego oficial del 2024 FIA Formula One World Championship™. Libera tu espíritu de victoria para convertirte en leyenda en Carrera profesional de F1®, la primera gran actualización de este modo desde 2016. Conduce como los mejores y logra una sincronía perfecta con tu coche gracias al nuevo sistema EA SPORTS™ Dynamic Handling. Enciende tu pasión conectándote con tus equipos y pilotos favoritos y demuestra que tienes lo que hace falta en los nuevos modos y experiencias.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Ver Mas</a>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-4">
+          <div class="col-12 col-md-6 col-lg-4 mt-5">
             <div class="card">
-              <img src="..." class="card-img-top" alt="..." />
+              <img src="https://media.vandal.net/m/6-2023/20236291654396_1.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">E-Football 2024</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                La versión 2024 de eFootball ya se encuentra disponible para PlayStation 5, PlayStation 4, Xbox Series X, Xbox Series S, Xbox One y también en PC de manera gratuita. Con el propósito de celebrar esta nueva llegada, se han anunciado algunas bonificaciones para conseguir monedas junto a experiencia que servirán en el momento en el que decidas jugar un partido en este imperdible título.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Ver Mas</a>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-4">
+          <div class="col-12 col-md-6 col-lg-4 mt-5">
             <div class="card">
-              <img src="..." class="card-img-top" alt="..." />
+              <img src="https://fotografias.larazon.es/clipping/cmsimages02/2024/10/13/56A4F02C-E7FD-4EF3-B864-588AB0E41014/semana-videojuegos-super-mario-party-jamboree-just-dance-2025-marcan-estrenos-14-18-octubre_98.jpg?crop=1235,695,x32,y0&width=1900&height=1069&optimize=low&format=webply" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Super Mario Party</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+         Con este juego de Mario vas a disfrutar de horas de diversión y de nuevos desafíos que te permitirán mejorar como gamer.
+Interactúa con otros jugadores
+Podrás disfrutar de una experiencia inigualable, ya que te permite jugar con tus amistades y compartir momentos inolvidables.
+Diversión sin fronteras
+Podrás compartir cada juego con personas de todo el mundo, ya que es posible conectarse de manera online.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Ver Mas</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 mt-5">
+            <div class="card">
+              <img src="https://derechadiario.com.ar/filesedc/uploads/image/post/last-of-us-2-remaster-psn_1200_800.webp" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">The Last of Us-Parte II</h5>
+                <p class="card-text">
+                 Cinco años después de su peligroso viaje a través de unos Estados Unidos pospandemia, Ellie y Joel logran establecerse en Jackson, Wyoming. Vivir entre una próspera comunidad de sobrevivientes les ha concedido paz y estabilidad, a pesar de la amenaza constante de los infectados y de otros sobrevivientes más desesperados
+                </p>
+                <a href="#" class="btn btn-primary">Ver Mas</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 mt-5">
+            <div class="card">
+              <img src="https://img.asmedia.epimg.net/resizer/v2/6PXBCBWCGRO2HI7NANOQVLNXA4.jpg?auth=528802000750e1c6bc05a5ce80b4c17f52e3018e2c7a4ca0213ca0b1479f67c6&width=1472&height=828&smart=true" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Halo Infinite</h5>
+                <p class="card-text">
+                 Halo Infinite es una entrega troncal de la saga insignia de Microsoft, a la vez secuela directa de Halo 5: Guardians y reinicio espiritual de toda la serie. La tercera parte del arco del Reclamador nos lleva a explorar el anillo Zeta (Instalación 07) de la mano del Jefe Maestro y su compañero, el desafortunado piloto de un Pelican de la UNSC definido como "el personaje más humano de la saga"
+                </p>
+                <a href="#" class="btn btn-primary">Ver Mas</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 mt-5">
+            <div class="card">
+              <img src="https://support.2k.com/hc/theming_assets/01HZKYGZH54QVPGAH548RS7XVY" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">NBA-2K 2024</h5>
+                <p class="card-text">
+                 Experimenta la cultura del baloncesto en NBA 2K24. Disfruta da acción a raudales y de opciones ilimitadas de personalización de Mi JUGADOR en Mi CARRERA. Crea tu quinteto de ensueño en MyTEAM. 
+                </p>
+                <a href="#" class="btn btn-primary">Ver Mas</a>
               </div>
             </div>
           </div>
