se modifica texto en card

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ Podrás compartir cada juego con personas de todo el mundo, ya que es posible co
               <div class="card-body">
                 <h5 class="card-title">NBA-2K 2024</h5>
                 <p class="card-text">
-                 Experimenta la cultura del baloncesto en NBA 2K24. Disfruta da acción a raudales y de opciones ilimitadas de personalización de Mi JUGADOR en Mi CARRERA. Crea tu quinteto de ensueño en MyTEAM. 
+                 Experimenta la cultura del baloncesto en NBA 2K24. Disfruta da acción a raudales y de opciones ilimitadas de personalización de Mi JUGADOR en Mi CARRERA. Crea tu quinteto de ensueño en MyTEAM. Entra al mundo de la NBA!
                 </p>
                 <a href="#" class="btn btn-primary">Ver Mas</a>
               </div>
