--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary p-3">
+      <nav class="navbar navbar-expand-lg bg-propio p-3">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="./index.html">
             <img src="./img/logo.png" alt=""
           /></a>
           <button
@@ -121,7 +121,7 @@
       </div>
     </header>
     <main>
-      <h2 class="p-5 text-center">Juegos Recomendados</h2>
+      <h2 class="p-5 text-center mt-5">Juegos Recomendados</h2>
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4 mt-5">
@@ -132,7 +132,9 @@
                 <p class="card-text">
                  Forma parte de los 20 con EA SPORTS™ F1® 24, el videojuego oficial del 2024 FIA Formula One World Championship™. Libera tu espíritu de victoria para convertirte en leyenda en Carrera profesional de F1®, la primera gran actualización de este modo desde 2016. Conduce como los mejores y logra una sincronía perfecta con tu coche gracias al nuevo sistema EA SPORTS™ Dynamic Handling. Enciende tu pasión conectándote con tus equipos y pilotos favoritos y demuestra que tienes lo que hace falta en los nuevos modos y experiencias.
                 </p>
-                <a href="#" class="btn btn-primary">Ver Mas</a>
+                <div class="text-center">
+                <a href="#" class="btn btn-dark">Ver Mas</a>
+                </div>
               </div>
             </div>
           </div>
@@ -144,7 +146,9 @@
                 <p class="card-text">
                 La versión 2024 de eFootball ya se encuentra disponible para PlayStation 5, PlayStation 4, Xbox Series X, Xbox Series S, Xbox One y también en PC de manera gratuita. Con el propósito de celebrar esta nueva llegada, se han anunciado algunas bonificaciones para conseguir monedas junto a experiencia que servirán en el momento en el que decidas jugar un partido en este imperdible título.
                 </p>
-                <a href="#" class="btn btn-primary">Ver Mas</a>
+                <div class="text-center">
+                <a href="#" class="btn btn-dark">Ver Mas</a>
+                </div>
               </div>
             </div>
           </div>
@@ -160,7 +164,9 @@ Podrás disfrutar de una experiencia inigualable, ya que te permite jugar con tu
 Diversión sin fronteras
 Podrás compartir cada juego con personas de todo el mundo, ya que es posible conectarse de manera online.
                 </p>
-                <a href="#" class="btn btn-primary">Ver Mas</a>
+                <div class="text-center">
+                <a href="#" class="btn btn-dark">Ver Mas</a>
+                </div>
               </div>
             </div>
           </div>
@@ -172,7 +178,9 @@ Podrás compartir cada juego con personas de todo el mundo, ya que es posible co
                 <p class="card-text">
                  Cinco años después de su peligroso viaje a través de unos Estados Unidos pospandemia, Ellie y Joel logran establecerse en Jackson, Wyoming. Vivir entre una próspera comunidad de sobrevivientes les ha concedido paz y estabilidad, a pesar de la amenaza constante de los infectados y de otros sobrevivientes más desesperados
                 </p>
-                <a href="#" class="btn btn-primary">Ver Mas</a>
+                <div class="text-center">
+                <a href="#" class="btn btn-dark">Ver Mas</a>
+                </div>
               </div>
             </div>
           </div>
@@ -184,7 +192,9 @@ Podrás compartir cada juego con personas de todo el mundo, ya que es posible co
                 <p class="card-text">
                  Halo Infinite es una entrega troncal de la saga insignia de Microsoft, a la vez secuela directa de Halo 5: Guardians y reinicio espiritual de toda la serie. La tercera parte del arco del Reclamador nos lleva a explorar el anillo Zeta (Instalación 07) de la mano del Jefe Maestro y su compañero, el desafortunado piloto de un Pelican de la UNSC definido como "el personaje más humano de la saga"
                 </p>
-                <a href="#" class="btn btn-primary">Ver Mas</a>
+                <div class="text-center">
+                <a href="#" class="btn btn-dark">Ver Mas</a>
+                </div>
               </div>
             </div>
           </div>
@@ -196,7 +206,9 @@ Podrás compartir cada juego con personas de todo el mundo, ya que es posible co
                 <p class="card-text">
                  Experimenta la cultura del baloncesto en NBA 2K24. Disfruta da acción a raudales y de opciones ilimitadas de personalización de Mi JUGADOR en Mi CARRERA. Crea tu quinteto de ensueño en MyTEAM. Entra al mundo de la NBA!
                 </p>
-                <a href="#" class="btn btn-primary">Ver Mas</a>
+                <div class="text-center">
+                <a href="#" class="btn btn-dark">Ver Mas</a>
+                </div>
               </div>
             </div>
           </div>
@@ -204,7 +216,7 @@ Podrás compartir cada juego con personas de todo el mundo, ya que es posible co
       </div>
     </main>
     <footer>
-      <div class="container-fluid p-5 mt-5 bg-body-tertiary">
+      <div class="container-fluid p-5 mt-5 bg-propio">
         <div class="row justify-content-evenly align-items-center">
           <div class="propio col-12 col-lg-3">
             <img src="./img/logo.png" alt="" />
