--- a/paginas/inicio.html
+++ b/paginas/inicio.html
@@ -13,9 +13,9 @@
 </head>
 <body>
   <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary p-3">
+      <nav class="navbar navbar-expand-lg bg-propio p-3">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="../index.html">
             <img src="../img/logo.png" alt=""
           /></a>
           <button
@@ -77,7 +77,7 @@
 
 
 <footer>
-      <div class="container-fluid p-5 mt-5 bg-body-tertiary">
+      <div class="container-fluid p-5 mt-5 bg-propio">
         <div class="row justify-content-evenly align-items-center">
           <div class="propio col-12 col-lg-3">
             <img src="./img/logo.png" alt="" />
